# irods

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  30to31.txt  31to32.txt  32to33.txt  CHANGELOG.md  CMakeLists.txt  Doxyfile  HOWTO_RELEASE  HOWTO_RELEASE.txt  INSTALL  KNOWN_ISSUES  LICENSE  Makefile  README  README.md  RELEASE_NOTES  SECURITY.md  VERSION  VERSION.json.dist  VERSION.json.dist.in  VERSION.json.in  changelog  externals.json  fosscots.txt  irods_completion.bash  irods_completion.tcsh  irods_consortium_continuous_integration_build_hook.py  irodsctl  manual.rst  mkdocs.yml  postinst  preinst  prerm  version.json.dist.in
clients/icommands/: .clang-format  CMakeLists.txt  README.md  ub-sanitizer-ignorelist.txt
clients/icommands/packaging/: postinst  userspace.cmake
clients/icommands/rulegen/: HELP.rulegen  rulegen.cpp  rulegen.l  rulegen.y  test2.r
clients/icommands/scripts/: iDel  iGet  iTicket
clients/icommands/src/: iadmin.cpp  iapitest.cpp  ibun.cpp  icd.cpp  ichksum.cpp  ichmod.cpp  iclienthints.cpp  icp.cpp  ienv.cpp  ierror.cpp  iexit.cpp  ifsck.cpp  iget.cpp  igroupadmin.cpp  ihelp.cpp  iinit.cpp  ils.cpp  ilsresc.cpp  imcoll.cpp  imeta.cpp  imiscsvrinfo.cpp  imkdir.cpp  imv.cpp  ipasswd.cpp  iphymv.cpp  ips.cpp  iput.cpp  ipwd.cpp  iqdel.cpp  iqmod.cpp  iqstat.cpp  iquery.cpp  iquest.cpp  iquota.cpp  ireg.cpp  irepl.cpp  irm.cpp  irmdir.cpp  irmtrash.cpp  irsync.cpp  (+12 more)
epm/: CHANGES  INSTALL  Makefile.in  README  aix.c  bsd.c  config.h  config.h.in  configure  configure.in  deb.c  default.xpm  dist.c  epm.c  epm.h  epm.list.in  epminstall.c  epmstring.h  file.c  gui-common.cxx  gui-common.h  inst.c  mkepmlist.c  osx.c  pkg.c  portable.c  qprintf.c  rpm.c  run.c  setld.c  setup.cxx  setup.fl  setup.h  setup2.cxx  slackware.c  snprintf.c  string.c  support.c  swinstall.c  tar.c  (+4 more)
epm/doc/: 1-intro.html  2-building.html  3-packaging.html  4-advanced.html  5-examples.html  Makefile.in  a-license.html  b-manpages.html  c-reference.html  d-relnotes.html  epm-book.book  epm-book.html  epm.list.man  epm.man  epminstall.man  epmlogo.tif  mantohtml.c  mkepmlist.man  preface.html  setup.man  setup.types.man  title.html
epm/macosx/: setup.icns  uninst.icns  uninst.info
lib/: CMakeLists.txt
lib/administration/: CMakeLists.txt
lib/api/: CMakeLists.txt  doxygen-api.config
lib/core/: CMakeLists.txt
lib/filesystem/: CMakeLists.txt  README.md
lib/genquery1/: CMakeLists.txt
lib/hasher/: CMakeLists.txt
lib/metadata/: CMakeLists.txt
lib/rbudp/: CMakeLists.txt
packaging/userspace/: compat_shims.py  elfinfo_util.py  externs_libs.common  known_libs.centos7  known_libs.common  known_libs.debian11  known_libs.ubuntu16  known_libs.ubuntu18  known_libs.ubuntu20  libdirectives.py  lief_instrumentation.py  pyproject.toml  runpath_util.py  strip_util.py  userspace-packager.py  utilbase.py
plugins/: CMakeLists.txt  Makefile  Makefile.base
plugins/api/: .gitignore  CMakeLists.txt  Makefile
plugins/auth/: CMakeLists.txt  Makefile  Makefile.base
plugins/auth_legacy/: CMakeLists.txt
plugins/authentication/: CMakeLists.txt
plugins/database/: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.base  README  build.sh
plugins/experimental/: CMakeLists.txt  copy.cpp  parallel_copy_collection.cpp  parallel_copy_collection.hpp  parallel_filesystem_operation.hpp  parallel_remove_collection.cpp  parallel_remove_collection.hpp  recursive_remove.cpp  remove.cpp  replicate.cpp
plugins/microservices/: CMakeLists.txt  Makefile
plugins/network/: CMakeLists.txt  Makefile  Makefile.base
plugins/re/: Makefile  Makefile.base
plugins/resources/: CMakeLists.txt  Makefile  Makefile.base  Makefile.in  eirods_create_write_replicator.cpp  eirods_create_write_replicator.h  eirods_object_oper.cpp  eirods_object_oper.h  eirods_oper_replicator.h  eirods_repl_types.h  eirods_replicator.cpp  eirods_replicator.h  eirods_unlink_replicator.cpp  eirods_unlink_replicator.h  libcompound.cpp  libhpss.cpp  libnonblocking.cpp  libpassthru.cpp  librepl.cpp  libroundrobin.cpp  libstructfile.cpp  libunivmss.cpp  libunixfilesystem.cpp
plugins/rule_engines/: CMakeLists.txt
server/: CMakeLists.txt
server/api/: CMakeLists.txt
server/auth/: CMakeLists.txt
server/control_plane/: CMakeLists.txt
server/core/: CMakeLists.txt
server/delay_server/: CMakeLists.txt
server/drivers/: CMakeLists.txt
server/genquery2/: CMakeLists.txt
server/harness/: CMakeLists.txt
server/hostname_resolves_to_local_address/: CMakeLists.txt
server/icat/: CMakeLists.txt
server/irods_grid/: CMakeLists.txt
server/main_server/: CMakeLists.txt
server/re/: CMakeLists.txt  irods_re_structs.cpp
unit_tests/: CMakeLists.txt  test_dstream.cpp  test_logical_paths_and_special_characters.cpp  unit_tests_list.json
unit_tests/cmake/: utils.cmake
unit_tests/src/: irods_error_enum_matcher.hpp  test_access_time_queue.cpp  test_atomic_apply_acl_operations.cpp  test_atomic_apply_metadata_operations.cpp  test_authenticate_client.cpp  test_capped_memory_resource.cpp  test_client_connection.cpp  test_client_server_negotiation.cpp  test_connection_pool.cpp  test_data_object_finalize.cpp  test_data_object_modify_info.cpp  test_data_object_proxy.cpp  test_delay_hints_parser.cpp  test_delay_rule_locking_api.cpp  test_dns_cache.cpp  test_dstream.cpp  test_environment_variables.cpp  test_file_object.cpp  test_fixed_buffer_resource.cpp  test_fully_qualified_username.cpp  test_generate_random_alphanumeric_string.cpp  test_genquery1_flex_bison_parser.cpp  test_getRodsEnv.cpp  test_get_delay_rule_info.cpp  test_get_file_descriptor_info.cpp  test_get_resource_info_for_operation.cpp  test_hashers.cpp  test_host_list_context_string.cpp  test_hostname_cache.cpp  test_irods_hierarchy_parser.cpp  test_irods_key_value_proxy.cpp  test_irods_lifetime_manager.cpp  test_irods_linked_list_iterator.cpp  test_json_apis_from_client.cpp  test_json_events.cpp  test_logical_locking.cpp  test_logical_paths_and_special_characters.cpp  test_metadata.cpp  test_packstruct.cpp  test_parallel_transfer_engine.cpp  (+36 more)
(+6599 files in other folders)
